# salesnote

./: .gitignore  README.md  v.py
.github/workflows/: SETUP_INSTRUCTIONS.md  android-deploy.yml  api-deploy.yml  ios-deploy.yml  test.yml  website-deploy.yml  worker-deploy.yml
backend/: .env.example  .gitignore  Cargo.toml  README.md  SECURITY_REVIEW.md  manage.sh  nginx.conf  nginx.conf.template  salesnote.service  salesnote@.service  salesnoteworker.service  x.py
backend/k6/: README.md  home-gets.js  item-list.js  login-only.js  sales-create.js  sales-list.js
backend/k6/lib/: api.js  config.js
backend/migrations/: 0001_init.sql  0002_auth_email_retry.sql  0003_add_timezone.sql  0004_refresh_tokens.sql  0005_device_sessions.sql  0006_email_templates.sql  0007_drop_email_subject_body.sql  0008_drop_email_next_attempt_at.sql  0009_add_shop_counters.sql  0010_receipt_customer_and_drop_suggestions.sql  0011_sales_list_indexes.sql  0012_analytics_movement_indexes.sql  0013_shop_product_daily_aggregate.sql  0014_drop_receipts_use_sales_signature.sql  0015_shop_sales_daily_aggregate.sql  0016_sales_contact_cleanup.sql  0017_move_fcm_token_to_device_sessions.sql  0018_login_perf_indexes.sql  0019_enable_pgcrypto_for_auth.sql  0020_password_reset_code_failed_attempts.sql  0021_sales_pricing_breakdown.sql  0022_rename_tax_to_vat.sql  0023_signup_verification_codes.sql  0024_sales_status.sql  0025_shop_bank_accounts.sql  0026_sales_signature_nullable_for_invoices.sql  0027_shop_currency_code.sql  0028_shop_currency_code_backfill_from_phone.sql  0029_shop_live_agent_subscription.sql  0030_drop_shop_live_agent_subscription_flag.sql
backend/src/: config.rs  db.rs  lib.rs
backend/src/api/: media.rs  mod.rs  request_origin.rs  response.rs  routes.rs  state.rs
backend/src/api/email/: mod.rs
backend/src/api/email/templates/: password-reset.html  signup-verification.html
backend/src/api/handlers/: analytics.rs  auth.rs  health.rs  home.rs  live_agent.rs  mod.rs  receipts.rs  sales.rs  shops.rs  signatures.rs
backend/src/api/middlewares/: auth.rs  rate_limit.rs
backend/src/api/sql/: common.rs
backend/src/models/: analytics.rs  auth.rs  device.rs  email.rs  health.rs  id.rs  mod.rs  receipt.rs  sale.rs  shop.rs  signature.rs
backend/src/storage/: gcs.rs
backend/src/worker/: geo.rs  mod.rs
backend/src/worker/email/: message.rs  mod.rs
backend/src/worker/email/templates/: password-reset.html  welcome.html
backend/src/worker/notification/: fcm.rs
backend/src/worker/progress/: daily.rs  message.rs  mod.rs  monthly.rs  repo.rs  time.rs  weekly.rs  yearly.rs
backend/website/: index.html  nginx.http.conf.template  nginx.https.conf.template
mobile/: .gitignore  IMPROVEMENTS.md  README.md  gen_icons.dart  pad_icon.dart  pubspec.yaml  z.py
mobile/android/: .gitignore
web/: splash.html
(+170 files in other folders)
